[gd_scene load_steps=2 format=3 uid="uid://da7upf5goigaw"]

[ext_resource type="Script" uid="uid://dpuuqfuec026k" path="res://control.gd" id="1_0fbet"]

[node name="UI_Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0fbet")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Button" type="Button" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_disabled_color = Color(0.768627, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "Jaaaaaaa"

[node name="PanelContainer2" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = 720.0
offset_top = 264.0
offset_right = 1152.0
offset_bottom = 648.0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer2"]
layout_mode = 2

[node name="playerList" type="ItemList" parent="PanelContainer2/VBoxContainer"]
layout_mode = 2
allow_search = false
auto_width = true
auto_height = true
icon_scale = 0.25

[node name="GameChoice" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = 216.0
offset_top = 112.0
offset_right = 632.0
offset_bottom = 472.0

[node name="GameList" type="ItemList" parent="GameChoice"]
layout_mode = 2

[connection signal="pressed" from="PanelContainer/Button" to="." method="_on_button_pressed"]
[connection signal="item_selected" from="GameChoice/GameList" to="." method="_on_game_list_item_selected"]
